// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LocalizationEditor /> create localization editor 1`] = `
<div
  className="fd-localization-editor"
>
  <label
    className="fd-form__label"
  >
    Localization Editor Label
  </label>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group fd-input-group--after"
          onClick={[Function]}
        >
          <input
            className=""
            placeholder="Enter Label"
            type="text"
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
          >
            <button
              className="fd-button--light fd-localization-editor__button"
            >
              EN*
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LocalizationEditor /> create localization editor 2`] = `
<div
  className="fd-localization-editor blue"
>
  <label
    className="fd-form__label"
  >
    Localization Editor Compact Mode
  </label>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group fd-input-group--compact fd-input-group--after"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input--compact"
            placeholder="Enter Label"
            type="text"
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
          >
            <button
              className="fd-button--light fd-localization-editor__button"
            >
              EN*
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LocalizationEditor /> create localization editor 3`] = `
<div
  className="fd-localization-editor"
>
  <label
    className="fd-form__label"
  >
    Localization Editor Label
  </label>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group fd-input-group--after"
          onClick={[Function]}
        >
          <textarea />
          <span
            className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button fd-input-group__addon--textarea"
          >
            <button
              className="fd-button--light fd-localization-editor__button"
            >
              EN*
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
